[package]
name = "eastcambs-bin-calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
google-calendar = "0.10.0"
reqwest = { version = "0.13.0", features = ["blocking"] }
scraper = "0.25.0"
serde = "1.0.228"
serde_json = "1.0.148"
uuid = { version = "1.19.0", features = ["v4"] }
